--- a/13reasons.html
+++ b/13reasons.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
@@ -38,8 +39,18 @@
 			E, depois que cada pessoa termina de escutar das fitas, ela deve passar a caixa para a próxima pessoa. Se alguém decidir quebrar a corrente, um outro conjunto 
 			das fitas será vazado para o público. Cada fita se dirige à uma pessoa específica em sua escola e detalha o envolvimento da mesma em seu suicídio.</p>
 			<p>A série possui a primeira temporada, com 13 episódios, lançada em 2017 e existem projetos para exibição da próxima temporada para os próximos anos.</p>
-			<img class="imgpagina" src="imagens/13reasons.jpg" alt="Banner da série 13 Reasons Why"/>
-			<h2>Elenco</h2>
+			<img  class="imgpaginas" src="imagens/13reasons.png" alt="Banner da série 13 Reasons Why"/>
+			<br/>
+			
+			<h3>Resumo da primeira temporada</h3>
+			<p>Clay Jensen encontra uma caixa cheia de fitas cassete anonimamente deixadas na porta de sua casa. Ele toca a primeira fita na caixa de som de seu pai. 
+			Ao se assustar com sua mãe, Clay, acidentalmente, deixa a caixa de som cair. Então, em um walkman roubado de seu amigo, Tony, ele percebe que sua colega de classe 
+			da escola, Hannah Baker, que faleceu recentemente, é quem está falando. Clay escuta a primeira fita, na qual Hannah relata as experiências que a deixaram para baixo. 
+			Ela começa compartilhando a história de seu primeiro beijo, com Justin Foley, que espalhou um rumor obsceno que começou sua espiral descendente. É revelado através de
+			vários flashbacks que Clay gostava de Hannah e trabalhava com ela como atendentes em um cinema.</p>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Dylan Minnette como Clay Jensen</li>
 			<li>Katherine Langford como Hannah Baker</li>
