--- a/friends.html
+++ b/friends.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
@@ -29,7 +30,7 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>Friends</h1>
+			<h2>Friends</h2>
 			<p>Ross, Rachel, Mônica, Chandler, Joey e Phoebe formam um grupo de seis amigos que lutam para se sobressair e progredir na competitiva vida de Manhattan. 
 			Seu humor inteligente e apoio mútuo incondicional fazem com sua amizade seja cada vez mais forte, superando assim todos os obstáculos que a vida lhes apresenta. 
 			Trabalho, família, responsabilidade, dinheiro, sexo, compromisso e, sobretudo, amor e amizade, são alguns dos temas que preocupam e, ás vezes, divertem esses personagens.</p>
@@ -37,8 +38,18 @@
 			conquistando um sucesso após o outro. Sua trilha sonora promocional, "I'll Be There for You" (Rembrandts), é tão famosa quanto o programa, pois a sua mensagem e o refrão 
 			definem perfeitamente o significado da existência da série. Ao todo são 10 temporadas que somam num total de 236 episódios.</p>
 			<p>O primeiro episódio foi lançado em  22 de Setembro de 1994, e o último episódio em 6 de Maio de 2004.</p>
-			<img class="imgpagina" src="imagens/friends.jpg" alt="Banner da série Friends"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/friends.png" alt="Banner da série Friends"/>
+			<br/>
+			
+			<h3>Resumo da primeira temporada</h3>
+			<p>A primeira temporada introduz os seis personagens principais: Rachel, Monica, Phoebe, Joey, Chandler e Ross. Rachel chega no Central Perk, 
+			após deixar seu noivo Barry no altar e se mudar para o apartamento de Mônica. Ross tenta constantemente dizer a Rachel que a ama, enquanto sua ex-esposa 
+			lésbica, Carol, está esperando seu bebê. Joey é apresentado como um ator lutando por seu espaço, enquanto Phoebe trabalha como massagista. 
+			Chandler termina com namorada Janice, que frequentemente retorna em outros episódios. No final da temporada, Chandler acidentalmente revela que 
+			Ross ama Rachel, que percebe que ela se sente da mesma maneira</p>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Jennifer Aniston como Rachel Green</li>
 			<li>Courteney Cox como Monica Geller</li>
@@ -46,7 +57,8 @@
 			<li>Matt LeBlanc como Joey Tribbiani</li>
 			<li>David Schwimmer como Ross Geller</li>
 			<li>Matthew Perry como Chandler Bing</li>
-			</ul>	
+			</ul>
+			
 		</article>
 	</section>	
 			</body>
