--- a/fuller.html
+++ b/fuller.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
@@ -29,13 +30,21 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>Fuller House</h1>
+			<h2>Fuller House</h2>
 			<p>Nesta nova série, que é uma sequência do clássico Três é Demais (Full House), D.J. trabalha como veterinária em São Francisco, mas acaba de ficar viúva justo no momento 
 			em que espera o seu terceiro filho. É quando Stephanie, uma musicista aspirante, e Kimmy, junto com sua filha adolescente Ramona, se mudam para morar com D.J. e ajudá-la a 
 			cuidar de seus três filhos.</p>
 			<p>A série está na sua terceira temporada, onde seu primeiro episódio foi ao ar em 26 de fevereiro de 2016. Uma série original Netflix.</p>
-			<img class="imgpagina" src="imagens/fuller.jpg" alt="Banner da série Fuller House"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/fuller.png" alt="Banner da série Fuller House"/>
+			<br/>
+			
+			<h3>Resumo da primeira temporada</h3>
+			<p>A atração mostra a vida de D.J. Tanner, filha mais velha de Danny, protagonista de Full House, vinte anos após o final da primeira série. 
+			Assim como sua progenitora, a produção possui o mesmo contexto, onde a personagem acaba ficando viúva, e contará com a presença de sua irmã do meio, 
+			Stephanie, e de sua melhor amiga, Kimmy Gibbler, para cuidar de seus três filhos.</p>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Candace Cameron - Donna Jo "D.J" Margareth Tanner</li>
 			<li>Jodie Sweetin - Stephanie "Steph" Judith Tanner</li>
