--- a/gilmore.html
+++ b/gilmore.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
@@ -29,21 +30,24 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>Gilmore Girls</h1>
+			<h2>Gilmore Girls</h2>
 			<p>Star Halow, Connecticut. Uma pequena cidade característica por suas áreas verdes e floridas, suas casas com cercas brancas e 
 			muitos personagens particulares. É neste ambiente que se desenvolve a apaixonante, divertida e muito sensível história da vida de Lorelai e Rory Gilmore. Como boa mãe 
 			independente, Lorelai organizou sua vida de maneira de que Rory fosse seu norte, transformando-se em sua melhor amiga e confidente. Uma sorte que a mesma Lorelai não 
 			teve durante sua infância pois sua mãe, Emily Gilmore, como bom exemplo de uma dama da alta sociedade não compartilhava da maioria dos interesses da jovem Lorelai. 
 			Mas família é família e os Gilmore sabem que, apesar das diferenças, estão sempre juntos para superar as dificuldades, amadurecendo e seguindo em frente.</p>
 			<p>A série possui 8 temporadas, em torno de 20 a 22 episódios cada uma.</p>
-			<img class="gilmore" src="imagens/gilmore.jpg" alt="Banner da série Gilmore Girls"/>
-			<h1>Gilmore Girls - Um ano para recordar </h1>
+			<br/>
+			
+			<h3>Gilmore Girls - Um ano para recordar </h3>
 			<p>No final do ano de 2016, Gilmore Girls - Um ano para recordar, foi ao ar. Dividida em quatro episódios, a continuação é ambientada nove anos após o final da série 
 			original.</p>
 			<p>Lorelai passa por uma espécie de "crise de meia-idade", a carreira profssional de Rory não caminha da forma esperada e Emily (Kelly Bishop) está perdida após a morte do marido, Richard (Edward Herrmann). Inclusive, 
 			a ausência do saudoso ator (que faleceu em dezembro de 2014 por causa de um câncer cérebral) compõe parte essencial da trama, numa bela homenagem. </p>
-			<img class="gilmore" src="imagens/gilmorebanner.jpg" alt="Banner da série Gilmore Girls - Um ano para recordar"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/gilmore.png" alt="Banner da série Gilmore Girls - Um ano para recordar"/>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Lauren Graham -	Lorelai Gilmore</li>
 			<li>Alexis Bledel -	Lorelai "Rory" Leigh Gilmore</li>
