--- a/gossip.html
+++ b/gossip.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
@@ -30,7 +31,7 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>Gossip Girl</h1>
+			<h2>Gossip Girl</h2>
 			<p>A série, sobre jovens estudantes das escolas de elite no Upper East Side de Manhattan em Nova York, segue quando Serena van der Woodsen retorna à cidade 
 			após ter ficado seis meses fora em um internato e se mantido fora do alcance de amigos e conhecidos. Os acontecimentos e histórias de cada personagem são narrados em um site por 
 			uma blogueira anônima, que atende pelo pseudônimo "Gossip Girl".</p>
@@ -43,8 +44,10 @@
 			de Dan, Vanessa Abrams. Fazendo parte da trama há também o irmão de Serena, Erik, sua mãe Lily van der Woodsen e Rufus Humphrey, separado de sua esposa Alison , pais de Dan e Jenny e uma impostora, Ivy Dickens  que se passa pela prima de Serena (Esta ingressa na série 
 			na quarta temporada e se torna personagem principal na quinta temporada). A partir da quinta temporada Jenny Humphrey e Vanessa Abrams  saem do elenco 
 			do seriado, porém fazem algumas participações especiais.</p>
-			<img class="imgpagina" src="imagens/gossip.jpg" alt="Banner da série Gossip Girl"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/gossip.png" alt="Banner da série Gossip Girl"/>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Kristen Bell - Narradora / Gossip Girl</li>
 			<li>Blake Lively - Serena van der Woodsen</li>
