--- a/mother.html
+++ b/mother.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
@@ -30,7 +31,7 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>How I Met Your Mother</h1>
+			<h2>How I Met Your Mother</h2>
 			<p>A série gira em torno da vida de Ted Mosby e dos seus amigos, que é narrada pelo próprio aos seus filhos, 25 anos mais tarde. Bob Saget, como 
 			Ted Mosby do futuro, conta então aos filhos as histórias e peripécias que o levaram a conhecer a mãe deles. As outras personagens principais são Marshall Eriksen,
 			Robin Scherbatsky, Lily Aldrin e Barney Stinson.</p>
@@ -38,8 +39,18 @@
 			Com gestos românticos questionáveis, Ted conhece Robin Scherbatsky, no bar que costumavam frequentar, Maclaren's Pub. 
 			Após uma série de eventos Robin passa a pertencer ao grupo de amigos de Ted: Barney, Marshall, e sua noiva, Lily, que namoram desde o primeiro ano da faculdade.</p>
 			<p>No dia 11 de Janeiro de 2010, a série alcançou os 100 episódios com o episódio Girls vs Suits.</p>
-			<img class="imgpagina" src="imagens/mother.png" alt="Banner da série How I Met Your Mother"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/mother.png" alt="Banner da série How I Met Your Mother"/>
+			<br/>
+			
+			<h3>Resumo da primeira temporada</h3>
+			<p>Ted começa a namorar uma confeiteira, Victoria (Ashley Williams), com quem se reúne no casamento de um amigo, fazendo com que Robin fique 
+			com ciúmes e perceba que ela tem sentimentos por Ted. Victoria ganha uma bolsa de estudos em uma confeitaria e muda-se para a Alemanha, então ela e 
+			Ted tentam um relacionamento à distância. Quando Ted descobre sobre os sentimentos de Robin, ele diz que rompeu com Victoria. Eles quase tem relações 
+			sexuais quando Victoria telefona e Robin atende, confundindo o telefone de Ted pelo dela própria. Ted e Victoria se separam, e com raiva Robin se distância 
+			de Ted, mas, eventualmente, se reconciliam e resolvem namorar.</p>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Josh Radnor como Ted Mosby</li>
 			<li>Cobie Smulders como Robin Scherbatsky</li>
