--- a/place.html
+++ b/place.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
+        <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
 	<body>
@@ -30,13 +31,21 @@
 	<!-- corpo -->
 	<section>
 		<article>
-				<h1>The Good Place</h1>
+				<h2>The Good Place</h2>
 			<p>A série acompanha Eleanor, uma mulher de Nova Jersey que percebe que não vem sendo uma pessoa do bem. Ela decide virar a página e aprender o que realmente 
 			significa ser “boa” ou “ruim”,ao mesmo tempo em que tenta consertar os erros do passado. Em sua jornada, ela se depara com Michael, um homem que, após uma série de 
 			circunstâncias inesperadas, se torna o guia de Eleanor na caminhada para se tornar alguém melhor.</p>
 			<p>O primeiro episódio foi ao ar em 19 de setembro de 2016, e possui duas temporadas.</p>
-			<img class="imgpagina" src="imagens/goodplace.jpg" alt="Banner da série The Good Place "/>
-				<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/goodplace.jpg" alt="Banner da série The Good Place "/>
+			<br/>
+			
+			<h3>Resumo da primeira temporada</h3>
+			<p>É necessário ser uma pessoa extremamente boa em vida para conseguir entrar no Lugar Bom. Ou então muita sorte, tal como aconteceu com Eleanor. 
+			Depois da protagonista conhecer Chidi (William Jackson Harper), a sua alma gêmea, ela revela que não deveria estar ali. Existe um engano, e ela entrou 
+			no lugar de outra pessoa que tinha o nome exatamente igual ao seu.</p>
+			<br/>
+			
+				<h3>Elenco</h3>
 				<ul>
 				<li>Kristen Bell como Eleanor Shellstrop</li>
 				<li>William Jackson Harper como Chidi Anagonye</li>
