--- a/stranger.html
+++ b/stranger.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
+        <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
 	<body>
@@ -29,13 +30,15 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>Stranger Things</h1>
+			<h2>Stranger Things</h2>
 			<p>Uma declaração de amor aos clássicos sobrenaturais dos anos 80, Stranger Things é a história de um menino que desaparece sem deixar vestígios. 
 			Ao procurar por respostas, a família, os amigos e a polícia gradulamente mergulham num mistério envolvendo experimentos ultrassecretos do governo, forças 
 			sobrenaturais e uma estranha garotinha.</p>
 			<p>O primeiro episódio foi lançado em 15 de Julho de 2016, e a série está na sua segunda temporada.</p>
-			<img class="imgpagina" src="imagens/stranger.jpg" alt="Banner da série Stranger Things"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/stranger.png" alt="Banner da série Stranger Things"/>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Winona Ryder como Joyce Byers</li>
 			<li>David Harbour como Jim Hopper</li>
