--- a/suits.html
+++ b/suits.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="css/estilo.css">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
@@ -29,15 +30,25 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>Suits</h1>
+			<h2>Suits</h2>
 			<p>Apesar de brilhante, Mike Ross não terminou a faculdade, já que foi pego vendendo uma prova de matemática para a filha do reitor. Ele possui uma memória 
 			fotográfica e enciclopédica, e acaba ganhando a vida fazendo provas para outras pessoas, deixando o sonho de ser advogado de lado.</p>
 			<p>Entretanto, sua sorte muda quando ele é contratado por Harvey Specter, um dos adovgados mais reconhecidos e famosos de Nova York. Após uma entrevista acidental 
 			com Mike, Harvey fica impressionado com a inteligência e conhecimento de leis do jovem, além do desejo genuíno de se tornar um advogado, portanto o coloca como seu 
 			associado na empresa. Ambos, no entanto, mentem e dizem que ele é formado em Harvard.</p>
 			<p>A série possui um total de 7 temporadas.</p>
-			<img class="imgpagina" src="imagens/suits.jpg" alt="Banner da série Suits"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/suits.png" alt="Banner da série Suits"/>
+			<br/>
+			
+			<h3>Resumo da primeira temporada</h3>
+			<p>Mike Ross é um ex-estudante de direito que não chegou a completar seus estudos. Para se sustentar, 
+			o jovem comete algumas infrações leves. Porém, quando a necessidade aperta, a influência de Trevor, seu melhor amigo, 
+			o coloca em cena para realizar um ato criminoso. Dotado de inteligência, Mike percebe que a empreitada se tornou uma emboscada. 
+			Na fuga, depara-se com Harvey Specter, um dos melhores advogados de New York que, por obra do destino, procurava por um novo associado 
+			para a empresa onde atuava. É aí onde toda a aventura começa.</p>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Gabriel Macht como Harvey Reginald Specter</li>
 			<li>Patrick J. Adams como Michael James "Mike" Ross</li>
