--- a/time.html
+++ b/time.html
@@ -30,7 +30,7 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>Once Upon a Time</h1>
+			<h2>Once Upon a Time</h2>
 			<p>A série se passa na cidade fictícia de Storybrooke, no Maine, cujos moradores são todos personagens de contos de fadas que foram transportados da 
 			Floresta Encantada para o "mundo real" através de uma poderosa maldição obtida através de Rumplestiltskin e lançada pela Rainha Má Regina.</p>
 			<p>Após perderem a memória de suas vidas na Floresta Encantada, cada personagem ganhou uma nova identidade com empregos adaptados ao mundo moderno. 
@@ -43,8 +43,10 @@
 			<p>Os episódios geralmente têm um segmento que dá detalhes das vidas dos personagens no passado, que, quando colocados em ordem, adiciona uma peça ao enigma 
 			dos personagens e sua conexão com os eventos que precederam a maldição e suas consequências. O outro, definido no presente, segue um padrão semelhante com um 
 			resultado diferente, mas também entrega ideias similares.</p>
-			<img class="imgpagina" src="imagens/once.jpg" alt="Banner da série Once Upon a Time"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/once.png" alt="Banner da série Once Upon a Time"/>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Ginnifer Goodwin como Branca de Neve / Mary Margaret Blanchard</li>
 			<li>Jennifer Morrison como Emma Swan</li>
