--- a/little.html
+++ b/little.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <title>O mundo das séries</title>
     </head>
@@ -30,14 +31,16 @@
 	<!-- corpo -->
 	<section>
 		<article>
-			<h1>Pretty Little Liars</h1>
+			<h2>Pretty Little Liars</h2>
 			<p>Rosewood é uma pequena, tranquila e bela cidade na Pensilvânia. De tão tranquila e intocada, nunca se adivinharia que detém tantos segredos.</p>
 			<p>Há um ano, a popular Alison DiLaurentis desapareceu, deixando todos acreditarem que fora vítima de um assassinato. Depois desse grande fato na cidade, 
 			a amizade entre suas quatro inseparáveis amigas nunca mais foi a mesma. De forma trágica, o destino une Spencer, Hanna, Aria e Emily novamente. Mas o caos se instala 
 			na vida das quatro garotas quando elas começam a receber mensagens de texto de alguém que se auto-intitula "A" ameaçando-as a contar todos os seus segredos, segredos 
 			que só Alison poderia saber.</p>
-			<img class="imgpagina" src="imagens/little.jpg" alt="Banner da série Pretty Little Liars"/>
-			<h2>Elenco</h2>
+			<img class="imgpaginas" src="imagens/little.png" alt="Banner da série Pretty Little Liars"/>
+			<br/>
+			
+			<h3>Elenco</h3>
 			<ul>
 			<li>Troian Bellisario - Spencer Hastings</li>
 			<li>Ashley Benson - Hanna Marin</li>
