Adição do Script
Alteração do menu com adição do script

--- a/gossip.html
+++ b/gossip.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="pt-br">
     <head>
@@ -8,60 +7,86 @@
         <title>O mundo das séries</title>
     </head>
 	<body>
-	<!-- foto de banner -->
-	<section id="cabecalho">
-	<header>
-	</header>
-	<!-- menu -->	
+		<!-- foto de banner -->
+		<section id="cabecalho">	
+		<h1>O Mundo das Séries</h1>	
+		</section>
+			<header>
+			</header>
+			<!-- menu -->	
 			<nav class="topnav">
-		<a href="index.html" tabindex="1">Home</a>
-		<a href="13reasons.html" tabindex="2"> 13 Reasons Why </a>
-		<a href="friends.html" tabindex="3"> Friends </a>
-		<a href="stranger.html" tabindex="4"> Stranger Things </a>
-		<a href="gilmore.html" tabindex="5"> Gilmore Girls </a>
-		<a href="fuller.html" tabindex="6"> Fuller House </a>
-		<a href="suits.html" tabindex="7"> Suits </a>
-		<a href="gossip.html" tabindex="8"> Gossip Girl </a>
-		<a href="place.html" tabindex="9"> The Good Place </a>
-		<a href="mother.html" tabindex="10"> How I Met Your Mother </a>
-		<a href="time.html" tabindex="11"> Once Upon a Time </a>
-		<a href="little.html" tabindex="12"> Pretty Little Liars </a>
+				<a href="javaScript:abrefecha()">Menu</a>
+				<div id="af" style="display: none;">
+					<a href="index.html" tabindex="1">Home</a>
+					<a href="13reasons.html" tabindex="2"> 13 Reasons Why </a>
+					<a href="friends.html" tabindex="3"> Friends </a>
+					<a href="stranger.html" tabindex="4"> Stranger Things </a>
+					<a href="gilmore.html" tabindex="5"> Gilmore Girls </a>
+					<a href="fuller.html" tabindex="6"> Fuller House </a>
+					<a href="suits.html" tabindex="7"> Suits </a>
+					<a href="gossip.html" tabindex="8"> Gossip Girl </a>
+					<a href="place.html" tabindex="9"> The Good Place </a>
+					<a href="mother.html" tabindex="10"> How I Met Your Mother </a>
+					<a href="time.html" tabindex="11"> Once Upon a Time </a>
+					<a href="little.html" tabindex="12"> Pretty Little Liars </a>
+				</div>
 			</nav>
-	</section>
-	<!-- corpo -->
-	<section>
-		<article>
-			<h2>Gossip Girl</h2>
-			<p>A série, sobre jovens estudantes das escolas de elite no Upper East Side de Manhattan em Nova York, segue quando Serena van der Woodsen retorna à cidade 
-			após ter ficado seis meses fora em um internato e se mantido fora do alcance de amigos e conhecidos. Os acontecimentos e histórias de cada personagem são narrados em um site por 
-			uma blogueira anônima, que atende pelo pseudônimo "Gossip Girl".</p>
-			<p>Gossip Girl narra os escândalos de Serena e seus amigos 
-			desde a oitava série de Serena, quando a garota ficou com seu vestido branco todo molhado dentro de um avião na viagem de excursão da escola. Desde então, Serena virou a vitima 
-			preferida de Gossip Girl. Magoada pelo fato de Serena não ter dado nenhuma noticia e ainda por ter passado por gravíssimos problemas familiares sozinha, Blair Waldorf
-			começa excluindo socialmente a melhor amiga e mantendo distância de Serena, como punição pela total perda de contato durante sua ausência.</p>
-			<p>Envolvidos na trama temos também Nate Archibald 
-			e seu amigo de infância, Chuck Bass, e os irmãos até então "apagados" Dan Humphrey e Jenny Humphrey, além da amiga de infância
-			de Dan, Vanessa Abrams. Fazendo parte da trama há também o irmão de Serena, Erik, sua mãe Lily van der Woodsen e Rufus Humphrey, separado de sua esposa Alison , pais de Dan e Jenny e uma impostora, Ivy Dickens  que se passa pela prima de Serena (Esta ingressa na série 
-			na quarta temporada e se torna personagem principal na quinta temporada). A partir da quinta temporada Jenny Humphrey e Vanessa Abrams  saem do elenco 
-			do seriado, porém fazem algumas participações especiais.</p>
-			<img class="imgpaginas" src="imagens/gossip.png" alt="Banner da série Gossip Girl"/>
-			<br/>
-			
-			<h3>Elenco</h3>
-			<ul>
-			<li>Kristen Bell - Narradora / Gossip Girl</li>
-			<li>Blake Lively - Serena van der Woodsen</li>
-			<li>Leighton Meester - Blair Waldorf</li>
-			<li>Penn Badgley - Dan Humphrey</li>
-			<li>Chace Crawford - Nate Archibald</li>
-			<li>Ed Westwick - Chuck Bass</li>
-			<li>Kelly Rutherford - Lily van der Woodsen</li>
-			<li>Matthew Settle - Rufus Humphrey</li>
-			<li>Taylor Momsen - Jenny Humphrey</li>
-			<li>Jessica Szohr - Vanessa Abrams</li>
-			<li>Kaylee DeFer - Ivy Dickens</li>
-			</ul>
-		</article>
-	</section>	
-			</body>
-	</html>
+		</section>
+		<!-- corpo -->
+		<section>
+			<article>
+				<h1>Gossip Girl</h1>
+				<p>A série, sobre jovens estudantes das escolas de elite no Upper East Side de Manhattan em Nova York, segue quando Serena van der Woodsen retorna à cidade 
+				após ter ficado seis meses fora em um internato e se mantido fora do alcance de amigos e conhecidos. Os acontecimentos e histórias de cada personagem são narrados em um site por 
+				uma blogueira anônima, que atende pelo pseudônimo "Gossip Girl".</p>
+				<p>Gossip Girl narra os escândalos de Serena e seus amigos 
+				desde a oitava série de Serena, quando a garota ficou com seu vestido branco todo molhado dentro de um avião na viagem de excursão da escola. Desde então, Serena virou a vitima 
+				preferida de Gossip Girl. Magoada pelo fato de Serena não ter dado nenhuma noticia e ainda por ter passado por gravíssimos problemas familiares sozinha, Blair Waldorf
+				começa excluindo socialmente a melhor amiga e mantendo distância de Serena, como punição pela total perda de contato durante sua ausência.</p>
+				<p>Envolvidos na trama temos também Nate Archibald 
+				e seu amigo de infância, Chuck Bass, e os irmãos até então "apagados" Dan Humphrey e Jenny Humphrey, além da amiga de infância
+				de Dan, Vanessa Abrams. Fazendo parte da trama há também o irmão de Serena, Erik, sua mãe Lily van der Woodsen e Rufus Humphrey, separado de sua esposa Alison , pais de Dan e Jenny e uma impostora, Ivy Dickens  que se passa pela prima de Serena (Esta ingressa na série 
+				na quarta temporada e se torna personagem principal na quinta temporada). A partir da quinta temporada Jenny Humphrey e Vanessa Abrams  saem do elenco 
+				do seriado, porém fazem algumas participações especiais.</p>
+				<img class="imgpaginas" src="imagens/gossip.png" alt="Banner da série Gossip Girl"/>
+				<br/>
+				
+				<h3>Elenco</h3>
+				<ul>
+				<li>Kristen Bell - Narradora / Gossip Girl</li>
+				<li>Blake Lively - Serena van der Woodsen</li>
+				<li>Leighton Meester - Blair Waldorf</li>
+				<li>Penn Badgley - Dan Humphrey</li>
+				<li>Chace Crawford - Nate Archibald</li>
+				<li>Ed Westwick - Chuck Bass</li>
+				<li>Kelly Rutherford - Lily van der Woodsen</li>
+				<li>Matthew Settle - Rufus Humphrey</li>
+				<li>Taylor Momsen - Jenny Humphrey</li>
+				<li>Jessica Szohr - Vanessa Abrams</li>
+				<li>Kaylee DeFer - Ivy Dickens</li>
+				</ul>
+			</article>
+		</section>
+		<footer>
+		<p> Copyright &copy; Beatriz Marcasi Cerosi, todos os direitos reservados.</p>
+		</footer>
+	</body>
+			<script type="text/javascript">
+				function startmenu()
+				{
+					af.style.display = "none";
+				}
+						 
+				function abrefecha()			
+				{
+					if(af.style.display == "none")
+					{
+						af.style.display = "block";
+					}
+					else
+					{
+						startmenu();
+					} 
+				}
+			</script>
+</html>
