--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     </head>
 	<body>
 	<!-- foto de banner -->
-	<section id="cabecalho">
-	<header>
-	</header>
+	<section id="cabecalho">	
+		<h1>O Mundo das Séries</h1>	
 	</section>
+	<header>
+			
+	</header>
 	<!-- corpo -->
-	<section>
+	<section id="#">
 		<article>
 			<h1> Selecione uma imagem para ver a sinopse da série</h1>
 		</article>
@@ -32,6 +34,8 @@
 		</article>
 		
 	</section>
-	
+		<footer>
+		<p> Copyright &copy; Beatriz Marcasi Cerosi, todos os direitos reservados.</p>
+		</footer>
 	</body>
 	</html>
