--- a/time.html
+++ b/time.html
@@ -7,65 +7,91 @@
         <title>O mundo das séries</title>
     </head>
 	<body>
-	<!-- foto de banner -->
-	<section id="cabecalho">
-	<header>
-	</header>
-	<!-- menu -->	
+		<!-- foto de banner -->
+		<section id="cabecalho">	
+		<h1>O Mundo das Séries</h1>	
+		</section>
+			<header>
+			</header>
+			<!-- menu -->	
 			<nav class="topnav">
-		<a href="index.html" tabindex="1">Home</a>
-		<a href="13reasons.html" tabindex="2"> 13 Reasons Why </a>
-		<a href="friends.html" tabindex="3"> Friends </a>
-		<a href="stranger.html" tabindex="4"> Stranger Things </a>
-		<a href="gilmore.html" tabindex="5"> Gilmore Girls </a>
-		<a href="fuller.html" tabindex="6"> Fuller House </a>
-		<a href="suits.html" tabindex="7"> Suits </a>
-		<a href="gossip.html" tabindex="8"> Gossip Girl </a>
-		<a href="place.html" tabindex="9"> The Good Place </a>
-		<a href="mother.html" tabindex="10"> How I Met Your Mother </a>
-		<a href="time.html" tabindex="11"> Once Upon a Time </a>
-		<a href="little.html" tabindex="12"> Pretty Little Liars </a>
+				<a href="javaScript:abrefecha()">Menu</a>
+				<div id="af" style="display: none;">
+					<a href="index.html" tabindex="1">Home</a>
+					<a href="13reasons.html" tabindex="2"> 13 Reasons Why </a>
+					<a href="friends.html" tabindex="3"> Friends </a>
+					<a href="stranger.html" tabindex="4"> Stranger Things </a>
+					<a href="gilmore.html" tabindex="5"> Gilmore Girls </a>
+					<a href="fuller.html" tabindex="6"> Fuller House </a>
+					<a href="suits.html" tabindex="7"> Suits </a>
+					<a href="gossip.html" tabindex="8"> Gossip Girl </a>
+					<a href="place.html" tabindex="9"> The Good Place </a>
+					<a href="mother.html" tabindex="10"> How I Met Your Mother </a>
+					<a href="time.html" tabindex="11"> Once Upon a Time </a>
+					<a href="little.html" tabindex="12"> Pretty Little Liars </a>
+				</div>
 			</nav>
-	</section>
-	<!-- corpo -->
-	<section>
-		<article>
-			<h2>Once Upon a Time</h2>
-			<p>A série se passa na cidade fictícia de Storybrooke, no Maine, cujos moradores são todos personagens de contos de fadas que foram transportados da 
-			Floresta Encantada para o "mundo real" através de uma poderosa maldição obtida através de Rumplestiltskin e lançada pela Rainha Má Regina.</p>
-			<p>Após perderem a memória de suas vidas na Floresta Encantada, cada personagem ganhou uma nova identidade com empregos adaptados ao mundo moderno. 
-			A única esperança para eles reside em Emma Swan, filha de Branca de Neve e do Príncipe Encantado, que foi transportada ainda bebê para o mundo real, antes 
-			que a maldição fosse lançada.</p>
-			<p>Como tal, ela é a única destinada a quebrar a maldição e restaurar as memórias perdidas dos personagens. Emma é auxiliada por seu filho, Henry, o qual reencontrou 
-			recentemente depois de tê-lo entregado para a adoção logo após seu nascimento.</p>
-			<p>Henry tem um livro de contos de fadas, que contém as histórias que foram apagadas após a maldição, sendo também o responsável por fazer Emma acreditar na magia 
-			e quebrar a maldição, devolvendo a todos suas memórias. Henry também é o filho adotivo de Regina, criando um conflito e um interesse em comum entre as duas.</p>
-			<p>Os episódios geralmente têm um segmento que dá detalhes das vidas dos personagens no passado, que, quando colocados em ordem, adiciona uma peça ao enigma 
-			dos personagens e sua conexão com os eventos que precederam a maldição e suas consequências. O outro, definido no presente, segue um padrão semelhante com um 
-			resultado diferente, mas também entrega ideias similares.</p>
-			<img class="imgpaginas" src="imagens/once.png" alt="Banner da série Once Upon a Time"/>
-			<br/>
-			
-			<h3>Elenco</h3>
-			<ul>
-			<li>Ginnifer Goodwin como Branca de Neve / Mary Margaret Blanchard</li>
-			<li>Jennifer Morrison como Emma Swan</li>
-			<li>Lana Parrilla como Rainha Má / Regina Mills</li>
-			<li>Josh Dallas como Mendigo / Príncipe Encantado / David Nolan</li>
-			<li>Jared S. Gilmore como Henry Mills</li>
-			<li>Raphael Sbarge como Grilo Falante / Dr. Archibald Hopper</li>
-			<li>Jamie Dornan como Caçador / Xerife Graham Humbert</li>
-			<li>Robert Carlyle como Rumplestiltskin / Crocodilo / Fera / Sr. Gold</li>
-			<li>Eion Bailey como Pinóquio / August Wayne Booth</li>
-			<li>Emilie de Ravin como Belle / Lacey</li>
-			<li>Meghan Ory como Chapeuzinho Vermelho / Lobo / Ruby</li>
-			<li>Colin O'Donoghue como Killian Jones / Capitão Gancho</li>
-			<li>Michael Raymond-James como Baelfire / Neal Cassidy</li>
-			<li>Michael Socha como Will Scarlet / Valete de Copas / Rei Branco</li>
-			<li>Rebecca Mader como Bruxa Má do Oeste / Zelena</li>
-			<li>Sean Maguire como Robin Hood / Robin de Loxley</li>
-			</ul>
-		</article>
-	</section>	
-			</body>
-	</html>
+		</section>
+		<!-- corpo -->
+		<section>
+			<article>
+				<h1>Once Upon a Time</h1>
+				<p>A série se passa na cidade fictícia de Storybrooke, no Maine, cujos moradores são todos personagens de contos de fadas que foram transportados da 
+				Floresta Encantada para o "mundo real" através de uma poderosa maldição obtida através de Rumplestiltskin e lançada pela Rainha Má Regina.</p>
+				<p>Após perderem a memória de suas vidas na Floresta Encantada, cada personagem ganhou uma nova identidade com empregos adaptados ao mundo moderno. 
+				A única esperança para eles reside em Emma Swan, filha de Branca de Neve e do Príncipe Encantado, que foi transportada ainda bebê para o mundo real, antes 
+				que a maldição fosse lançada.</p>
+				<p>Como tal, ela é a única destinada a quebrar a maldição e restaurar as memórias perdidas dos personagens. Emma é auxiliada por seu filho, Henry, o qual reencontrou 
+				recentemente depois de tê-lo entregado para a adoção logo após seu nascimento.</p>
+				<p>Henry tem um livro de contos de fadas, que contém as histórias que foram apagadas após a maldição, sendo também o responsável por fazer Emma acreditar na magia 
+				e quebrar a maldição, devolvendo a todos suas memórias. Henry também é o filho adotivo de Regina, criando um conflito e um interesse em comum entre as duas.</p>
+				<p>Os episódios geralmente têm um segmento que dá detalhes das vidas dos personagens no passado, que, quando colocados em ordem, adiciona uma peça ao enigma 
+				dos personagens e sua conexão com os eventos que precederam a maldição e suas consequências. O outro, definido no presente, segue um padrão semelhante com um 
+				resultado diferente, mas também entrega ideias similares.</p>
+				<img class="imgpaginas" src="imagens/once.png" alt="Banner da série Once Upon a Time"/>
+				<br/>
+				
+				<h3>Elenco</h3>
+				<ul>
+				<li>Ginnifer Goodwin como Branca de Neve / Mary Margaret Blanchard</li>
+				<li>Jennifer Morrison como Emma Swan</li>
+				<li>Lana Parrilla como Rainha Má / Regina Mills</li>
+				<li>Josh Dallas como Mendigo / Príncipe Encantado / David Nolan</li>
+				<li>Jared S. Gilmore como Henry Mills</li>
+				<li>Raphael Sbarge como Grilo Falante / Dr. Archibald Hopper</li>
+				<li>Jamie Dornan como Caçador / Xerife Graham Humbert</li>
+				<li>Robert Carlyle como Rumplestiltskin / Crocodilo / Fera / Sr. Gold</li>
+				<li>Eion Bailey como Pinóquio / August Wayne Booth</li>
+				<li>Emilie de Ravin como Belle / Lacey</li>
+				<li>Meghan Ory como Chapeuzinho Vermelho / Lobo / Ruby</li>
+				<li>Colin O'Donoghue como Killian Jones / Capitão Gancho</li>
+				<li>Michael Raymond-James como Baelfire / Neal Cassidy</li>
+				<li>Michael Socha como Will Scarlet / Valete de Copas / Rei Branco</li>
+				<li>Rebecca Mader como Bruxa Má do Oeste / Zelena</li>
+				<li>Sean Maguire como Robin Hood / Robin de Loxley</li>
+				</ul>
+			</article>
+		</section>	
+		<footer>
+		<p> Copyright &copy; Beatriz Marcasi Cerosi, todos os direitos reservados.</p>
+		</footer>
+	</body>
+			<script type="text/javascript">
+				function startmenu()
+				{
+					af.style.display = "none";
+				}
+						 
+				function abrefecha()			
+				{
+					if(af.style.display == "none")
+					{
+						af.style.display = "block";
+					}
+					else
+					{
+						startmenu();
+					} 
+				}
+			</script>
+</html>
