--- a/fuller.html
+++ b/fuller.html
@@ -63,7 +63,7 @@
 			</article>
 		</section>
 		<footer>
-		<p> Copyright &copy; Beatriz Marcasi Cerosi, todos os direitos reservados.</p>
+		<p> Copyright &copy; Beatriz Marcasi Cerosi</p>
 		</footer>
 	</body>
 			<script type="text/javascript">
