--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<article>
 			<h1> Selecione uma imagem para ver a sinopse da série</h1>
 		</article>
-		<article>
+		<article class="div-portifolio">
 			<a href="13reasons.html"><img class="imgindex" src="imagens/13reasons.jpg" alt="Banner da série 13 Reasons Why"/></a>
 			<a href="friends.html"><img class="imgindex" src="imagens/friends.jpg" alt="Banner da série Friends"/></a>
 			<a href="stranger.html"><img class="imgindex" src="imagens/stranger.jpg" alt="Banner da série Stranger Things"/></a>
@@ -35,7 +35,7 @@
 		
 	</section>
 		<footer>
-		<p> Copyright &copy; Beatriz Marcasi Cerosi, todos os direitos reservados.</p>
+		<p> Copyright &copy; Beatriz Marcasi Cerosi</p>
 		</footer>
 	</body>
 	</html>
