--- a/suits.html
+++ b/suits.html
@@ -65,7 +65,7 @@
 			</article>
 		</section>
 		<footer>
-		<p> Copyright &copy; Beatriz Marcasi Cerosi, todos os direitos reservados.</p>
+		<p> Copyright &copy; Beatriz Marcasi Cerosi</p>
 		</footer>
 	</body>
 			<script type="text/javascript">
